# ownscribe

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
scripts/: demo_ask.py  demo_pipeline.py  live_preview.py
src/ownscribe/: cli.py  config.py  pipeline.py  pipeline_live.py  progress.py  search.py
src/ownscribe/audio/: base.py  coreaudio.py  sounddevice_recorder.py
src/ownscribe/summarization/: __init__.py  llama_cpp_summarizer.py
src/ownscribe/transcription/: breeze_transcriber.py  community_diarizer.py  firered_transcriber.py  funasr_transcriber.py  utils.py  whisperx_transcriber.py
swift/Sources/: AudioCapture.swift
tests/: test_chinese_backends.py  test_cli.py  test_community_diarizer.py  test_config.py  test_find_audio.py  test_mute.py  test_pipeline.py  test_progress.py  test_summarization.py  test_transcription.py
