[project]
name = "ownscribe"
version = "0.13.0"
description = "Fully local meeting transcription and summarization CLI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pascal Berrang", email = "git@p4l.dev" }
]
requires-python = ">=3.12"
keywords = ["meeting", "transcription", "summarization", "whisper", "local", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "whisperx>=3.8",
    "pyannote-audio>=4.0,<5",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
openai = ["openai>=1.0"]
chinese = [
    "funasr>=1.3.12,<2",
    "modelscope>=1.20,<2",
    "opencc-python-reimplemented>=0.1.7,<1",
    "transformers>=4.51,<5",
]
firered = [
    "cn2an>=0.5,<1",
    "funasr>=1.3.12,<2",
    "kaldiio>=2.18,<3",
    "kaldi-native-fbank>=1.15,<2",
    "modelscope>=1.20,<2",
    "opencc-python-reimplemented>=0.1.7,<1",
    "peft>=0.13,<1",
    "sentencepiece>=0.1.99,<1",
    "textgrid>=1.6,<2",
    "transformers>=4.51,<5",
]
all = [
    "cn2an>=0.5,<1",
    "funasr>=1.3.12,<2",
    "kaldiio>=2.18,<3",
    "kaldi-native-fbank>=1.15,<2",
    "modelscope>=1.20,<2",
    "ollama>=0.4",
    "openai>=1.0",
    "opencc-python-reimplemented>=0.1.7,<1",
    "peft>=0.13,<1",
    "sentencepiece>=0.1.99,<1",
    "textgrid>=1.6,<2",
    "transformers>=4.51,<5",
]

[project.urls]
Homepage = "https://github.com/paberr/ownscribe"
Repository = "https://github.com/paberr/ownscribe"
Issues = "https://github.com/paberr/ownscribe/issues"

[project.scripts]
ownscribe = "ownscribe.cli:cli"

[dependency-groups]
dev = [
    "ollama>=0.4",
    "openai>=1.0",
    "pytest>=8.0",
    "pytest-httpserver>=1.1",
    "ruff>=0.9",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/ownscribe/cli.py" = ["RUF001", "RUF002", "RUF003"]
"src/ownscribe/pipeline_live.py" = ["RUF001", "RUF002", "RUF003"]
"src/ownscribe/transcription/funasr_transcriber.py" = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
markers = [
    "macos: tests that require macOS",
    "hardware: tests that require audio hardware",
    "slow: slow-running tests",
]
